chore: Update project to meet all  briefing requirements

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - .:/app
     depends_on:
       - mongodb
-    command: "node server.js"
+    command: "node app/server.js"
   mongodb:
     container_name: mongodb
     image: mongo:latest
